src/bison_charmap.output
Grammar

    0 $accept: file $end

    1 file: charmap_file EOFT

    2 charmap_file: ε
    3             | charmap
    4             | prelude charmap
    5             | charmap default_width
    6             | prelude charmap default_width
    7             | charmap default_width width_section
    8             | prelude charmap default_width width_section

    9 prelude: configs

   10 configs: CONFIG config_value EOL
   11        | configs CONFIG config_value EOL

   12 config_value: TEXT
   13             | NUMBER

   14 charmap: CHARMAP definitions END CHARMAP EOL

   15 definitions: definition EOL
   16            | definitions definition EOL

   17 definition: CHARACTER_NAME value_list anything EOL
   18           | CHARACTER_NAME RANGE CHARACTER_NAME value_list anything EOL
   19           | CHARACTER_NAME RANGE_GNU CHARACTER_NAME value_list anything EOL

   20 value_list: hex_list
   21           | dec_list
   22           | oct_list

   23 hex_list: CHARACTER_HEX
   24         | hex_list CHARACTER_HEX

   25 dec_list: CHARACTER_DEC
   26         | dec_list CHARACTER_DEC

   27 oct_list: CHARACTER_OCT
   28         | oct_list CHARACTER_OCT

   29 default_width: WIDTH_DEFAULT NUMBER EOL

   30 width_section: WIDTH width_definitions END WIDTH EOL

   31 width_definitions: width_definition
   32                  | width_definitions width_definition

   33 width_definition: CHARACTER_NAME NUMBER EOL
   34                 | CHARACTER_NAME RANGE CHARACTER_NAME NUMBER EOL

   35 anything: thing
   36         | anything thing

   37 thing: CONFIG
   38      | CHARACTER_NAME
   39      | NUMBER
   40      | TEXT
   41      | CHARMAP
   42      | END
   43      | RANGE
   44      | RANGE_GNU
   45      | WIDTH
   46      | WIDTH_DEFAULT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CONFIG (258) 10 11 37
    CHARACTER_NAME (259) 17 18 19 33 34 38
    CHARACTER_HEX (260) 23 24
    CHARACTER_DEC (261) 25 26
    CHARACTER_OCT (262) 27 28
    NUMBER (263) 13 29 33 34 39
    EOFT (264) 1
    EOL (265) 10 11 14 15 16 17 18 19 29 30 33 34
    TEXT (266) 12 40
    CHARMAP (267) 14 41
    END (268) 14 30 42
    RANGE (269) 18 34 43
    RANGE_GNU (270) 19 44
    WIDTH (271) 30 45
    WIDTH_DEFAULT (272) 29 46


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    file (19)
        on left: 1
        on right: 0
    charmap_file (20)
        on left: 2 3 4 5 6 7 8
        on right: 1
    prelude (21)
        on left: 9
        on right: 4 6 8
    configs (22)
        on left: 10 11
        on right: 9 11
    config_value (23)
        on left: 12 13
        on right: 10 11
    charmap (24)
        on left: 14
        on right: 3 4 5 6 7 8
    definitions (25)
        on left: 15 16
        on right: 14 16
    definition (26)
        on left: 17 18 19
        on right: 15 16
    value_list (27)
        on left: 20 21 22
        on right: 17 18 19
    hex_list (28)
        on left: 23 24
        on right: 20 24
    dec_list (29)
        on left: 25 26
        on right: 21 26
    oct_list (30)
        on left: 27 28
        on right: 22 28
    default_width (31)
        on left: 29
        on right: 5 6 7 8
    width_section (32)
        on left: 30
        on right: 7 8
    width_definitions (33)
        on left: 31 32
        on right: 30 32
    width_definition (34)
        on left: 33 34
        on right: 31 32
    anything (35)
        on left: 35 36
        on right: 17 18 19 36
    thing (36)
        on left: 37 38 39 40 41 42 43 44 45 46
        on right: 35 36


State 0

    0 $accept: • file $end

    CONFIG   shift, and go to state 1
    CHARMAP  shift, and go to state 2

    $default  reduce using rule 2 (charmap_file)

    file          go to state 3
    charmap_file  go to state 4
    prelude       go to state 5
    configs       go to state 6
    charmap       go to state 7


State 1

   10 configs: CONFIG • config_value EOL

    NUMBER  shift, and go to state 8
    TEXT    shift, and go to state 9

    config_value  go to state 10


State 2

   14 charmap: CHARMAP • definitions END CHARMAP EOL

    CHARACTER_NAME  shift, and go to state 11

    definitions  go to state 12
    definition   go to state 13


State 3

    0 $accept: file • $end

    $end  shift, and go to state 14


State 4

    1 file: charmap_file • EOFT

    EOFT  shift, and go to state 15


State 5

    4 charmap_file: prelude • charmap
    6             | prelude • charmap default_width
    8             | prelude • charmap default_width width_section

    CHARMAP  shift, and go to state 2

    charmap  go to state 16


State 6

    9 prelude: configs •
   11 configs: configs • CONFIG config_value EOL

    CONFIG  shift, and go to state 17

    $default  reduce using rule 9 (prelude)


State 7

    3 charmap_file: charmap •
    5             | charmap • default_width
    7             | charmap • default_width width_section

    WIDTH_DEFAULT  shift, and go to state 18

    $default  reduce using rule 3 (charmap_file)

    default_width  go to state 19


State 8

   13 config_value: NUMBER •

    $default  reduce using rule 13 (config_value)


State 9

   12 config_value: TEXT •

    $default  reduce using rule 12 (config_value)


State 10

   10 configs: CONFIG config_value • EOL

    EOL  shift, and go to state 20


State 11

   17 definition: CHARACTER_NAME • value_list anything EOL
   18           | CHARACTER_NAME • RANGE CHARACTER_NAME value_list anything EOL
   19           | CHARACTER_NAME • RANGE_GNU CHARACTER_NAME value_list anything EOL

    CHARACTER_HEX  shift, and go to state 21
    CHARACTER_DEC  shift, and go to state 22
    CHARACTER_OCT  shift, and go to state 23
    RANGE          shift, and go to state 24
    RANGE_GNU      shift, and go to state 25

    value_list  go to state 26
    hex_list    go to state 27
    dec_list    go to state 28
    oct_list    go to state 29


State 12

   14 charmap: CHARMAP definitions • END CHARMAP EOL
   16 definitions: definitions • definition EOL

    CHARACTER_NAME  shift, and go to state 11
    END             shift, and go to state 30

    definition  go to state 31


State 13

   15 definitions: definition • EOL

    EOL  shift, and go to state 32


State 14

    0 $accept: file $end •

    $default  accept


State 15

    1 file: charmap_file EOFT •

    $default  reduce using rule 1 (file)


State 16

    4 charmap_file: prelude charmap •
    6             | prelude charmap • default_width
    8             | prelude charmap • default_width width_section

    WIDTH_DEFAULT  shift, and go to state 18

    $default  reduce using rule 4 (charmap_file)

    default_width  go to state 33


State 17

   11 configs: configs CONFIG • config_value EOL

    NUMBER  shift, and go to state 8
    TEXT    shift, and go to state 9

    config_value  go to state 34


State 18

   29 default_width: WIDTH_DEFAULT • NUMBER EOL

    NUMBER  shift, and go to state 35


State 19

    5 charmap_file: charmap default_width •
    7             | charmap default_width • width_section

    WIDTH  shift, and go to state 36

    $default  reduce using rule 5 (charmap_file)

    width_section  go to state 37


State 20

   10 configs: CONFIG config_value EOL •

    $default  reduce using rule 10 (configs)


State 21

   23 hex_list: CHARACTER_HEX •

    $default  reduce using rule 23 (hex_list)


State 22

   25 dec_list: CHARACTER_DEC •

    $default  reduce using rule 25 (dec_list)


State 23

   27 oct_list: CHARACTER_OCT •

    $default  reduce using rule 27 (oct_list)


State 24

   18 definition: CHARACTER_NAME RANGE • CHARACTER_NAME value_list anything EOL

    CHARACTER_NAME  shift, and go to state 38


State 25

   19 definition: CHARACTER_NAME RANGE_GNU • CHARACTER_NAME value_list anything EOL

    CHARACTER_NAME  shift, and go to state 39


State 26

   17 definition: CHARACTER_NAME value_list • anything EOL

    CONFIG          shift, and go to state 40
    CHARACTER_NAME  shift, and go to state 41
    NUMBER          shift, and go to state 42
    TEXT            shift, and go to state 43
    CHARMAP         shift, and go to state 44
    END             shift, and go to state 45
    RANGE           shift, and go to state 46
    RANGE_GNU       shift, and go to state 47
    WIDTH           shift, and go to state 48
    WIDTH_DEFAULT   shift, and go to state 49

    anything  go to state 50
    thing     go to state 51


State 27

   20 value_list: hex_list •
   24 hex_list: hex_list • CHARACTER_HEX

    CHARACTER_HEX  shift, and go to state 52

    $default  reduce using rule 20 (value_list)


State 28

   21 value_list: dec_list •
   26 dec_list: dec_list • CHARACTER_DEC

    CHARACTER_DEC  shift, and go to state 53

    $default  reduce using rule 21 (value_list)


State 29

   22 value_list: oct_list •
   28 oct_list: oct_list • CHARACTER_OCT

    CHARACTER_OCT  shift, and go to state 54

    $default  reduce using rule 22 (value_list)


State 30

   14 charmap: CHARMAP definitions END • CHARMAP EOL

    CHARMAP  shift, and go to state 55


State 31

   16 definitions: definitions definition • EOL

    EOL  shift, and go to state 56


State 32

   15 definitions: definition EOL •

    $default  reduce using rule 15 (definitions)


State 33

    6 charmap_file: prelude charmap default_width •
    8             | prelude charmap default_width • width_section

    WIDTH  shift, and go to state 36

    $default  reduce using rule 6 (charmap_file)

    width_section  go to state 57


State 34

   11 configs: configs CONFIG config_value • EOL

    EOL  shift, and go to state 58


State 35

   29 default_width: WIDTH_DEFAULT NUMBER • EOL

    EOL  shift, and go to state 59


State 36

   30 width_section: WIDTH • width_definitions END WIDTH EOL

    CHARACTER_NAME  shift, and go to state 60

    width_definitions  go to state 61
    width_definition   go to state 62


State 37

    7 charmap_file: charmap default_width width_section •

    $default  reduce using rule 7 (charmap_file)


State 38

   18 definition: CHARACTER_NAME RANGE CHARACTER_NAME • value_list anything EOL

    CHARACTER_HEX  shift, and go to state 21
    CHARACTER_DEC  shift, and go to state 22
    CHARACTER_OCT  shift, and go to state 23

    value_list  go to state 63
    hex_list    go to state 27
    dec_list    go to state 28
    oct_list    go to state 29


State 39

   19 definition: CHARACTER_NAME RANGE_GNU CHARACTER_NAME • value_list anything EOL

    CHARACTER_HEX  shift, and go to state 21
    CHARACTER_DEC  shift, and go to state 22
    CHARACTER_OCT  shift, and go to state 23

    value_list  go to state 64
    hex_list    go to state 27
    dec_list    go to state 28
    oct_list    go to state 29


State 40

   37 thing: CONFIG •

    $default  reduce using rule 37 (thing)


State 41

   38 thing: CHARACTER_NAME •

    $default  reduce using rule 38 (thing)


State 42

   39 thing: NUMBER •

    $default  reduce using rule 39 (thing)


State 43

   40 thing: TEXT •

    $default  reduce using rule 40 (thing)


State 44

   41 thing: CHARMAP •

    $default  reduce using rule 41 (thing)


State 45

   42 thing: END •

    $default  reduce using rule 42 (thing)


State 46

   43 thing: RANGE •

    $default  reduce using rule 43 (thing)


State 47

   44 thing: RANGE_GNU •

    $default  reduce using rule 44 (thing)


State 48

   45 thing: WIDTH •

    $default  reduce using rule 45 (thing)


State 49

   46 thing: WIDTH_DEFAULT •

    $default  reduce using rule 46 (thing)


State 50

   17 definition: CHARACTER_NAME value_list anything • EOL
   36 anything: anything • thing

    CONFIG          shift, and go to state 40
    CHARACTER_NAME  shift, and go to state 41
    NUMBER          shift, and go to state 42
    EOL             shift, and go to state 65
    TEXT            shift, and go to state 43
    CHARMAP         shift, and go to state 44
    END             shift, and go to state 45
    RANGE           shift, and go to state 46
    RANGE_GNU       shift, and go to state 47
    WIDTH           shift, and go to state 48
    WIDTH_DEFAULT   shift, and go to state 49

    thing  go to state 66


State 51

   35 anything: thing •

    $default  reduce using rule 35 (anything)


State 52

   24 hex_list: hex_list CHARACTER_HEX •

    $default  reduce using rule 24 (hex_list)


State 53

   26 dec_list: dec_list CHARACTER_DEC •

    $default  reduce using rule 26 (dec_list)


State 54

   28 oct_list: oct_list CHARACTER_OCT •

    $default  reduce using rule 28 (oct_list)


State 55

   14 charmap: CHARMAP definitions END CHARMAP • EOL

    EOL  shift, and go to state 67


State 56

   16 definitions: definitions definition EOL •

    $default  reduce using rule 16 (definitions)


State 57

    8 charmap_file: prelude charmap default_width width_section •

    $default  reduce using rule 8 (charmap_file)


State 58

   11 configs: configs CONFIG config_value EOL •

    $default  reduce using rule 11 (configs)


State 59

   29 default_width: WIDTH_DEFAULT NUMBER EOL •

    $default  reduce using rule 29 (default_width)


State 60

   33 width_definition: CHARACTER_NAME • NUMBER EOL
   34                 | CHARACTER_NAME • RANGE CHARACTER_NAME NUMBER EOL

    NUMBER  shift, and go to state 68
    RANGE   shift, and go to state 69


State 61

   30 width_section: WIDTH width_definitions • END WIDTH EOL
   32 width_definitions: width_definitions • width_definition

    CHARACTER_NAME  shift, and go to state 60
    END             shift, and go to state 70

    width_definition  go to state 71


State 62

   31 width_definitions: width_definition •

    $default  reduce using rule 31 (width_definitions)


State 63

   18 definition: CHARACTER_NAME RANGE CHARACTER_NAME value_list • anything EOL

    CONFIG          shift, and go to state 40
    CHARACTER_NAME  shift, and go to state 41
    NUMBER          shift, and go to state 42
    TEXT            shift, and go to state 43
    CHARMAP         shift, and go to state 44
    END             shift, and go to state 45
    RANGE           shift, and go to state 46
    RANGE_GNU       shift, and go to state 47
    WIDTH           shift, and go to state 48
    WIDTH_DEFAULT   shift, and go to state 49

    anything  go to state 72
    thing     go to state 51


State 64

   19 definition: CHARACTER_NAME RANGE_GNU CHARACTER_NAME value_list • anything EOL

    CONFIG          shift, and go to state 40
    CHARACTER_NAME  shift, and go to state 41
    NUMBER          shift, and go to state 42
    TEXT            shift, and go to state 43
    CHARMAP         shift, and go to state 44
    END             shift, and go to state 45
    RANGE           shift, and go to state 46
    RANGE_GNU       shift, and go to state 47
    WIDTH           shift, and go to state 48
    WIDTH_DEFAULT   shift, and go to state 49

    anything  go to state 73
    thing     go to state 51


State 65

   17 definition: CHARACTER_NAME value_list anything EOL •

    $default  reduce using rule 17 (definition)


State 66

   36 anything: anything thing •

    $default  reduce using rule 36 (anything)


State 67

   14 charmap: CHARMAP definitions END CHARMAP EOL •

    $default  reduce using rule 14 (charmap)


State 68

   33 width_definition: CHARACTER_NAME NUMBER • EOL

    EOL  shift, and go to state 74


State 69

   34 width_definition: CHARACTER_NAME RANGE • CHARACTER_NAME NUMBER EOL

    CHARACTER_NAME  shift, and go to state 75


State 70

   30 width_section: WIDTH width_definitions END • WIDTH EOL

    WIDTH  shift, and go to state 76


State 71

   32 width_definitions: width_definitions width_definition •

    $default  reduce using rule 32 (width_definitions)


State 72

   18 definition: CHARACTER_NAME RANGE CHARACTER_NAME value_list anything • EOL
   36 anything: anything • thing

    CONFIG          shift, and go to state 40
    CHARACTER_NAME  shift, and go to state 41
    NUMBER          shift, and go to state 42
    EOL             shift, and go to state 77
    TEXT            shift, and go to state 43
    CHARMAP         shift, and go to state 44
    END             shift, and go to state 45
    RANGE           shift, and go to state 46
    RANGE_GNU       shift, and go to state 47
    WIDTH           shift, and go to state 48
    WIDTH_DEFAULT   shift, and go to state 49

    thing  go to state 66


State 73

   19 definition: CHARACTER_NAME RANGE_GNU CHARACTER_NAME value_list anything • EOL
   36 anything: anything • thing

    CONFIG          shift, and go to state 40
    CHARACTER_NAME  shift, and go to state 41
    NUMBER          shift, and go to state 42
    EOL             shift, and go to state 78
    TEXT            shift, and go to state 43
    CHARMAP         shift, and go to state 44
    END             shift, and go to state 45
    RANGE           shift, and go to state 46
    RANGE_GNU       shift, and go to state 47
    WIDTH           shift, and go to state 48
    WIDTH_DEFAULT   shift, and go to state 49

    thing  go to state 66


State 74

   33 width_definition: CHARACTER_NAME NUMBER EOL •

    $default  reduce using rule 33 (width_definition)


State 75

   34 width_definition: CHARACTER_NAME RANGE CHARACTER_NAME • NUMBER EOL

    NUMBER  shift, and go to state 79


State 76

   30 width_section: WIDTH width_definitions END WIDTH • EOL

    EOL  shift, and go to state 80


State 77

   18 definition: CHARACTER_NAME RANGE CHARACTER_NAME value_list anything EOL •

    $default  reduce using rule 18 (definition)


State 78

   19 definition: CHARACTER_NAME RANGE_GNU CHARACTER_NAME value_list anything EOL •

    $default  reduce using rule 19 (definition)


State 79

   34 width_definition: CHARACTER_NAME RANGE CHARACTER_NAME NUMBER • EOL

    EOL  shift, and go to state 81


State 80

   30 width_section: WIDTH width_definitions END WIDTH EOL •

    $default  reduce using rule 30 (width_section)


State 81

   34 width_definition: CHARACTER_NAME RANGE CHARACTER_NAME NUMBER EOL •

    $default  reduce using rule 34 (width_definition)
